--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -48,3 +48,4 @@
 .flaticon-fire:before { content: "\f109"; }
 .flaticon-money:before { content: "\f10a"; }
 .flaticon-medicine:before { content: "\f10b"; }
+.flaticon-trademark:before { content: "\f10c"; }
